--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
           </nav>
 <!-- Nero -->
-<section>
+<section class="hero">>
     <div class="container">
         <div class="bg-hero d-flex align-items-center ps-5">
         <div class="row">
